# OS

./: .gitignore  .gitmodules
lab1/Mealy-Moore/: CMakeLists.txt  main.cpp
lab1/Mealy-Moore/src/Common/: Automat.h  LetterRandomizer.h
lab1/Mealy-Moore/src/Converter/: MachineConverter.h
lab1/Mealy-Moore/src/MachineSaver/: MachineSaver.h
lab1/Mealy-Moore/src/TextParser/: CSVTextParser.h  ITextParser.h
lab1/Mili-Moore/: CMakeLists.txt
lab2/Minimization/: CMakeLists.txt
lab2/Minimization/src/MachineMinimizator/: MachineMinimizator.cpp  MachineMinimizator.h
lab2/Minimization/src/MachineSaver/: MachineSaver.h
lab2/Minimization/src/TextParser/: CSVTextParser.h
lab2/Minimization/test/: output-mealy.csv
lab3/GrammaToDSM/: CMakeLists.txt  main.cpp
lab3/GrammaToDSM/src/Args/: Args.h  ArgsParser.h
lab3/GrammaToDSM/src/Common/: GrammarType.h
lab3/GrammarToDSM/: CMakeLists.txt  main.cpp
lab3/GrammarToDSM/src/Converter/: DSMConverter.cpp  DSMConverter.h
lab3/GrammarToDSM/src/GrammarParser/: GrammarParser.cpp  GrammarParser.h
lab3/GrammarToDSM/src/Machine/: Machine.h
lab3/GrammarToDSM/src/MachineSaver/: MachineSaver.cpp  MachineSaver.h
lab3/GrammarToDSM/tests/: left-side-grammar-output.csv  right-side-grammar-output.csv  right-side-grammar.txt
lab3/NotDSMToDSM/: CMakeLists.txt  main.cpp
lab3/NotDSMToDSM/src/Common/: Lettering.h
lab3/NotDSMToDSM/src/Converter/: DSMConverter.cpp  DSMConverter.h
lab3/NotDSMToDSM/src/Machine/: Machine.h
lab3/NotDSMToDSM/src/TextParser/: CSVTextParser.cpp  (+1 more)
lab3/NotDSMToDSM/test/: input.csv  output.csv
(+2 files in other folders)
